--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,8 @@
         </activity>
         <activity android:name=".ServicesActivity">
         </activity>
+        <activity android:name=".ServiceDialogActivity" android:theme="@android:style/Theme.Holo.Dialog">
+        </activity>
     </application>
     <uses-permission android:name="android.permission.INTERNET"/>
 </manifest>
